--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,8 @@
-/*Especificidad: 001*/
-body {
-    font-family: Tahoma, sans-serif;
-    color: #818181;
-    background-color: #fff;
-    }
-  /*Especificidad: 001*/
-  h1 {
-    color: #fff;    
-    background-color:#FF5733; 
-    text-transform: uppercase;
-    padding: 2em; 
-    text-align: center;     
-    }
-  
+/*
+h1{
+    background-color: coral;
+    text-align: center;
+}
+*/
   
   
