--- a/estilo.css
+++ b/estilo.css
@@ -67,6 +67,14 @@ section{
     background-color: #FFE6A7;
 }
 
+section video{
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
+
+
 aside {
     background-color: #FFE6A7;
   }
@@ -90,9 +98,16 @@ aside {
 
   form{
       background-color:#FFE6A7 ;
-      padding: 10 px;
+      border-radius: 10px;
+      border-width: 10px;
+      border-style:double;
+      border-color: #6F1D1B;
+      padding: 10px;
       text-align: center;
-      width: 50%px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block
   }
 
   input{
@@ -106,9 +121,19 @@ aside {
       
   }
 
-  video{
-    max-width: 30%;
+  figure img{
+    margin-left: auto;
+    margin-right: auto;
+    display: block
   }
+
+  figcaption{
+      text-align: center;
+      padding-top: 5px;
+      padding-bottom: 5px;
+  }
+
+ 
 
   /*ver si se puede*/
   #boton{
@@ -120,6 +145,7 @@ aside {
     background-color: #99582A;
     border-radius: 6px;
     border: 2px solid #99583F;
+    margin-top: 5px;
   }
 
   
