--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@ h2{
   }
 
 p{
-    text-align: justify;
+    /*text-align: justify;*/
     padding-left: 5%;
     padding-right: 5%;
 }
@@ -42,7 +42,7 @@ nav{
 /*11*/
 nav a {
     float: inline-start;
-    color: black;
+    color: white;
     
     padding: 14px 24px;
     text-decoration: none;
@@ -147,14 +147,6 @@ aside {
     border: 2px solid #99583F;
     margin-top: 5px;
   }
-
-  
-
-
-
-
-
-
 
   /* #222222
     #FFFFFF
