--- a/estilo.css
+++ b/estilo.css
@@ -1,138 +1,204 @@
+/*001*/
 
-body{
+body {
     font: 400 18px Tahoma, sans-serif;
     background-color: #FFFFFF;
 }
 
-/*1*/
+
+/*001*/
+
 h1 {
-	font-family: Segoe UI, sans-serif;
-	font-size: 32px;
-	font-weight: 700;
-	line-height: 26.4px;
-	background-color:#6F1D1B;
-	color: white;
-	text-transform: uppercase;
+    font-family: Segoe UI, sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 26.4px;
+    background-color: #6F1D1B;
+    color: white;
+    text-transform: uppercase;
     padding-top: 3%;
     padding-bottom: 3%;
     text-align: center;
+}
 
-    
-    }
-/*1*/
-h2{
+
+/*001*/
+
+h2 {
     font-family: Segoe UI, sans-serif;
-	line-height: 26.4px;
-	background-color:#6F1D1B;
-	color: white;
-	text-transform: uppercase;
-    padding:10px
-  }
+    line-height: 26.4px;
+    background-color: #6F1D1B;
+    color: white;
+    text-transform: uppercase;
+    padding: 10px
+}
 
-p{
+
+/*001*/
+
+p {
     /*text-align: justify;*/
     padding-left: 5%;
     padding-right: 5%;
 }
-/*1*/
-nav{
+
+
+/*001*/
+
+nav {
     background-color: #99582A;
     padding: 14px 24px;
 }
-/*11*/
+
+
+/*002*/
+
 nav a {
     float: inline-start;
     color: white;
-    
     padding: 14px 24px;
     text-decoration: none;
     font-size: 20px;
-  }
-  /*21*/
-  nav a:hover {
+}
+
+
+/*012*/
+
+nav a:hover {
     background-color: #FFE6A7;
     color: black;
-  }
+}
 
-  
-  footer{
-      text-align: center;
-      position: relative;
-  
-  }
-footer p{
+
+/*001*/
+
+footer {
+    text-align: center;
+    position: relative;
+}
+
+
+/*002*/
+
+footer p {
     text-align: center;
 }
-section{
+
+
+/*001*/
+
+section {
     background-color: #FFE6A7;
 }
 
-section video{
+
+/*002*/
+
+section video {
     margin-left: auto;
     margin-right: auto;
     display: block
 }
+
+
+/*001*/
 
 aside {
     background-color: #FFE6A7;
-  }
+}
 
-  table{
-      width: 100%;
-      text-align: left;
-      border-collapse: collapse;
-      background-color: #FFE6A7;
-  }
-  caption{
-      background-color: #6F1D1B;
-      padding: 20px;
-      font-weight: bold;
-      color: #FFFFFF;
-      border-bottom:  solid 5px #99582A;
-  }
-  th, td{
-      padding: 20px;
-  }
 
-  form{
-      background-color:#FFE6A7 ;
-      border-radius: 10px;
-      border-width: 10px;
-      border-style:double;
-      border-color: #6F1D1B;
-      padding: 10px;
-      text-align: center;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-      display: block
-  }
+/*001*/
 
-  input{
-      border: 0;
-      outline: none;
-      border:solid 1px;
-      padding: 10px;
-  }
-  label, fieldset{
-      font-family: Segoe UI, sans-serif;
-      
-  }
+table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+    background-color: #FFE6A7;
+}
 
-  figure img{
+
+/*001*/
+
+caption {
+    background-color: #6F1D1B;
+    padding: 20px;
+    font-weight: bold;
+    color: #FFFFFF;
+    border-bottom: solid 5px #99582A;
+}
+
+
+/*001*/
+
+
+/*001*/
+
+th,
+td {
+    padding: 20px;
+}
+
+
+/*001*/
+
+form {
+    background-color: #FFE6A7;
+    border-radius: 10px;
+    border-width: 10px;
+    border-style: double;
+    border-color: #6F1D1B;
+    padding: 10px;
+    text-align: center;
+    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
     display: block
-  }
+}
 
-  figcaption{
-      text-align: center;
-      padding-top: 5px;
-      padding-bottom: 5px;
-  }
 
-  /*011*/
-  input[type="submit"]{
+/*001*/
+
+input {
+    border: 0;
+    outline: none;
+    border: solid 1px;
+    padding: 10px;
+}
+
+
+/*001*/
+
+
+/*001*/
+
+label,
+fieldset {
+    font-family: Segoe UI, sans-serif;
+}
+
+
+/*002*/
+
+figure img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
+
+/*001*/
+
+figcaption {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+
+/*011*/
+
+input[type="submit"] {
     text-decoration: none;
     padding: 10px;
     font-weight: 600;
@@ -142,4 +208,4 @@ aside {
     border-radius: 6px;
     border: 2px solid #99583F;
     margin-top: 5px;
-  }
+}
