--- a/grid.css
+++ b/grid.css
@@ -1,48 +1,49 @@
+/*001*/
 body{
     display: grid;
-    grid-template-rows: 13% 18% 62% 10%;
-    grid-template-columns: 70% 30%;
     gap: 10px;
+    grid-template-areas: 
+            "header header "
+            "section1 aside"
+            "section2 aside"
+            "footer footer"
+       ;
+       grid-template-columns: 70% 30%;
 }
 
 
 /*001*/
 
 header {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
+    grid-area: header
 }
 
 
 /*012*/
 
 body>section:first-child {
-    grid-column: 1 / 2;
-    grid-row: 3 / 3;
+    grid-area: section1;
 }
 
 
 /*012*/
 
 body>section:last-child {
-    grid-column: 1 / 2;
-    grid-row: 2 / 2;
+    grid-area: section2;
 }
 
 
 /*001*/
 
 footer {
-    grid-column: 1 / 3;
-    grid-row: 4 / 5;
+    grid-area: footer;
 }
 
 
 /*001*/
 
 aside {
-    grid-column: 2 / 3;
-    grid-row: 2 / 4;
+    grid-area: aside;
 }
 
 
@@ -58,24 +59,34 @@ aside section {
 /*003*/
 
 aside section img {
-    width: 50%;
+    max-width: 50%;
     align-self: center;
 }
 
 @media screen and (max-width: 1300px) {
     /*001*/
-    body {
-        display: flex;
-        flex-direction: column;
+    body{
+        display: grid;
+        gap: 10px;
+        grid-template-areas: 
+            "header"
+            "section1"
+            "section2"
+            "aside"
+            "footer"
+       ;
+       grid-template-columns: 100%;
     }
-    /*001*/
-    video {
-        width: 100%;
-    }
+
     /*001*/
     nav {
         display: grid;
         grid-template-rows: 50% 50%;
         grid-template-columns: 50% 50%;
+    }
+
+    /*001*/
+    video {
+        max-width: 100%;
     }
 }
