--- a/grid.css
+++ b/grid.css
@@ -8,7 +8,7 @@ body{
             "section2 aside"
             "footer footer"
        ;
-       grid-template-columns: 70% 30%;
+       grid-template-columns: 3fr 1fr;
 }
 
 
