--- a/estilo.css
+++ b/estilo.css
@@ -100,6 +100,12 @@ section video {
     display: block
 }
 
+section audio{
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
 
 /*001*/
 
