--- a/grid.css
+++ b/grid.css
@@ -33,6 +33,14 @@ body>section:last-child {
     grid-area: section2;
 }
 
+/*002*/
+
+figure img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
 
 /*001*/
 
