--- a/grid.css
+++ b/grid.css
@@ -39,6 +39,21 @@ figure img {
     margin-left: auto;
     margin-right: auto;
     display: block
+
+}
+
+/*002*/
+
+section video {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
+section audio{
+    margin-left: auto;
+    margin-right: auto;
+    display: block
 }
 
 
@@ -98,4 +113,10 @@ aside section img {
     video {
         max-width: 100%;
     }
+
+    figure img {
+        max-width: 100%;
+    
+    }
+
 }
