--- a/grid.css
+++ b/grid.css
@@ -113,8 +113,8 @@ aside section img {
         max-width: 100%;
     }
     
-    /*002*/
-    figure img{
+    /*003*/
+    section figure img{
         max-width: 100%;
     }
 
