--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 /*001*/
 body {
-    font: 400 18px Tahoma, sans-serif;
+    font: 400 1em Tahoma, sans-serif;
     background-color: white;
 }
 
@@ -8,9 +8,9 @@ body {
 /*001*/
 h1 {
     font-family: "Segoe UI", sans-serif;
-    font-size: 32px;
+    font-size: 1.8em;
     font-weight: 700;
-    line-height: 26.4px;
+    line-height: 2em;
     background-color: #6F1D1B;
     color: white;
     text-transform: uppercase;
@@ -23,11 +23,11 @@ h1 {
 /*001*/
 h2 {
     font-family: "Segoe UI", sans-serif;
-    line-height: 26.4px;
+    line-height: 1.6em;
     background-color: #6F1D1B;
     color: white;
     text-transform: uppercase;
-    padding: 10px
+    padding: 0.5em
 }
 
 
@@ -37,11 +37,10 @@ p {
     padding-right: 5%;
 }
 
-
 /*001*/
 nav {
     background-color: #99582A;
-    padding: 14px 24px;
+    padding: 1em;
 }
 
 
@@ -49,7 +48,7 @@ nav {
 nav a {
     float: inline-start;
     color: white;
-    padding: 14px 24px;
+    padding: 0.8em 1em;
     text-decoration: none;
     font-size: 20px;
 }
@@ -121,40 +120,35 @@ table {
 /*001*/
 caption {
     background-color: #6F1D1B;
-    padding: 20px;
+    padding: 1.4em;
     font-weight: bold;
     color: #FFFFFF;
-    border-bottom: solid 5px #99582A;
+
 }
 
 /*001*//*001*/
-th,
-td {
-    padding: 20px;
+th, td{
+    padding: 1em;
 }
-
 
 /*001*/
 form {
     background-color: #FFE6A7;
-    border-radius: 10px;
-    border-width: 10px;
+    border-radius: 1em;
+    border-width: 0.6em;
     border-style: double;
     border-color: #6F1D1B;
-    padding: 10px;
     text-align: center;
-    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
-    display: block
 }
 
 
 /*001*/
 input {
     outline: none;
-    border:  solid 1px;
-    padding: 10px;
+    border:  solid 0.01em;
+    padding: 1em;
 }
 
 /*001*//*001*/
@@ -166,21 +160,19 @@ fieldset {
 /*001*/
 figcaption {
     text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 1em;
 }
 
 
 /*011*/
 input[type="submit"] {
     text-decoration: none;
-    padding: 10px;
+    padding: 0.5em;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.1em;
     color: #ffffff;
     background-color: #99582A;
-    border-radius: 6px;
-    border: 2px solid #99583F;
-    
-    margin-top: 5px;
+    border-radius: 0.5em;
+    margin-top: 0.5em;
+    margin-bottom: 0.3em;
 }
